<resources>
    <string name="app_name">Wester</string>
    <string name="title_activity_maps">Map</string>
    <string-array name="urls">
        <item>http://opendata.newwestcity.ca/downloads/family/FAMILY_AND_GENERAL_SUPPORT_PROGRAMS.json</item>
        <item>http://opendata.newwestcity.ca/downloads/community-service-assets/COMMUNITY_SERVICE_ASSETS.json</item>
        <item>http://opendata.newwestcity.ca/downloads/community-programming/PARKS_RECREATION_AND_COMMUNITY_SCHOOL_PROGRAMMING.json</item>
        <item>http://opendata.newwestcity.ca/downloads/employment/EMPLOYMENT_AND_JOB_TRAINING.json</item>
    </string-array>
    <string name="title_activity_main">Wester</string>
    <string name="info_filter">Filter Request</string>
    <string name="info_text">Text Request</string>
    <string name="info_search">Search</string>
    <string name="app_label">Search</string>
    <string name="search_hint">Search...</string>
    <string name="service_name">Service_Name</string>
    <string name="sheetp1">sheetp1</string>
    <string name="log_latin">log_latin</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="post_code">Post Code</string>
    <string name="address">Address</string>
    <string name="hours">Hours</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="action_return">Return</string>
    <string name="dialog_return">Back</string>
</resources>
